2008-11-07  Cameron Zwarich  <zwarich@apple.com>

Reviewed by Geoff Garen.

        Bug 21801: REGRESSION (r37821): YUI date formatting JavaScript puts the letter 'd' in place of the day
        <https://bugs.webkit.org/show_bug.cgi?id=21801>

        Fix the constant register check in the 'typeof' optimization in
        CodeGenerator, which was completely broken after r37821.

        JavaScriptCore:

        * bytecompiler/CodeGenerator.cpp:
        (JSC::CodeGenerator::emitEqualityOp):

        LayoutTests:

        * fast/js/resources/typeof-constant-string.js: Added.
        * fast/js/typeof-constant-string-expected.txt: Added.
        * fast/js/typeof-constant-string.html: Added.


Canonical link: https://commits.webkit.org/30448@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38230 268f45cc-cd09-0410-ab3c-d52691b4dbfc